# cerebro

./: LICENSE  README.md  main.py  pyproject.toml
chats/: create_a_basic_chat_app_ui_in_python_using_textual.md
src/cerebro/: chat_app.py  main.py
src/cerebro/controllers/: conversation.py  ollama.py
src/cerebro/md_chats/: What_is_an_LLM.md  cerebro__architectual_ideas.md  how_to_accept_multiple_lines_input_with_python's_input_function.md  what_are_ai_agent_skills.md
src/cerebro/models/: conversation.py
src/cerebro/utils/: main_menu.py
