[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro"
description = "AI knowledge assistant"
version = "2026.0.1"
readme = "README.md"
authors = [{name = "Nelson Urrutia"}]
license = { file = "LICENSE" }
keywords = ["", ""]



[project.scripts]
cerebro = "cerebro.main:main"
